#9028 Add ownedByUser layer parameter